# kvsm

./: .Mk.yaml  .gitignore  README.md  meson.build  meson_options.txt
include/: camera.h  input.h
src/: camera.c  input.c  main.c  meson.build
subprojects/: sdl3.wrap
subprojects/ch9329/: meson.build
subprojects/ch9329/include/: ch9329.h
subprojects/ch9329/src/: ch9329.c  frame.c  info.c  keyboard.c  main.c  meson.build  mouse.c
